fix tapping on mobile safari

--- a/app/style.scss
+++ b/app/style.scss
@@ -15,6 +15,8 @@ canvas#gameboard {
   width: 500px;
   height: 600px;
   margin: 15px;
+  // fix mobile safari highlight on tapping
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .gamebutton {
